Refactored code to avoid deprecated coding styles.